--- a/mengmeng.html
+++ b/mengmeng.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
-    <link href="http://wsp.ishanggang.com/huawei/resources/lib/bootstrap-3.3.1-dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="http://wsp.ishanggang.com/huawei/resources/css/wap.css" rel="stylesheet">
-    <link href="http://wsp.ishanggang.com/huawei/resources/lib/mobilescroll/style/mobiscroll.2.13.2.css" rel="stylesheet"/>
+    <link href="bootstrap.min.css" rel="stylesheet">
+    <link href="wap.css" rel="stylesheet">
+    <link href="mobiscroll.2.13.2.css" rel="stylesheet"/>
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
@@ -105,9 +105,9 @@
     </form>
 </div>
 
-<script src="http://wsp.ishanggang.com/huawei/resources/lib/jquery/jquery-1.11.3.min.js"></script>
-<script src="http://wsp.ishanggang.com/huawei/resources/lib/bootstrap-3.3.1-dist/js/bootstrap.min.js"></script>
-<script src="http://wsp.ishanggang.com/huawei/resources/lib/citySelect/jsAddress.js"></script>
+<script src="jquery-1.11.3.min.js"></script>
+<script src="bootstrap.min.js"></script>
+<script src="jsAddress.js"></script>
 <div class="content">
     <div class="settings" style="display:none;">
         <select name="demo" id="demo">
@@ -115,7 +115,7 @@
         </select>
     </div>
 </div>
-<script src="http://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
+<script src="jweixin-1.2.0.js"></script>
 <script>
     wx.config({
         debug: false,
